imagens tambem ta aqui

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-    <img src="imagens/LOGO.png">
+    <img src="imagens/makeitreal.png">
     <div class="upload-container">
         <h1 class="mb-4">Upload de Arquivos</h1>
         <div id="artistas-container">
