--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         }
 
         .naruto {
-            background-color: #8fafda;
+            background-color: #8dabd3;
             color: rgb(255, 255, 255);
         }
     </style>
