--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         .naruto {
             background-color: #8dabd3;
             color: rgb(255, 255, 255);
-           
+
         }
     </style>
 </head>
@@ -53,6 +53,7 @@
     <img src="imagens/makeitreal.png">
     <div class="upload-container">
         <h1 class="mb-4">Upload de Arquivos</h1>
+        <h1 id="myDIV" style="display: none;">Sucesso</h1>
         <div id="artistas-container">
             <!-- Os botões e inputs de arquivo serão adicionados dinamicamente aqui -->
         </div>
@@ -61,7 +62,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
-       document.addEventListener('DOMContentLoaded', async function () {
+        document.addEventListener('DOMContentLoaded', async function () {
             try {
                 const response = await axios.get('/get_categorias');
                 const artistas = response.data;
@@ -116,6 +117,12 @@
 
                                 if (response.status === 200) {
                                     console.log('Arquivo enviado com sucesso!');
+                                    var x = document.getElementById("myDIV");
+                                    if (x.style.display === "none") {
+                                        x.style.display = "block";
+                                    } else {
+                                        x.style.display = "none";
+                                    }
                                 } else {
                                     console.error('Erro ao enviar arquivo:', response.statusText);
                                 }
@@ -154,7 +161,7 @@
                         btnVoltar.style.display = 'none';
                     });
 
-            
+
 
                     // Adicione aqui a lógica para lidar com os botões "Voltar" e a lógica de ocultar/mostrar inputs
 
