--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <img src="imagens/makeitreal.png">
     <div class="upload-container">
         <h1 class="mb-4">Upload de Arquivos</h1>
-        <h1 id="myDIV" style="display: none;">Sucesso</h1>
+        <h1 id="myDIV" style="display: none;">Arquivo enviado com sucesso</h1>
         <div id="artistas-container">
             <!-- Os botões e inputs de arquivo serão adicionados dinamicamente aqui -->
         </div>
